tests/compilefail71.out
[1mtests/compilefail71.pas:9:15: [0m[1m[93mwarning:[0m Variable possibly used before assignment: r
     9 | 	r := succ(r);
[1mtests/compilefail71.pas:9:10: [0m[1m[91merror:[0m Function succ() requires parameter of ordinal type
     9 | 	r := succ(r);

